tests/functional/lang/eval-fail-pathExists-1.err.exp
error:
       … while calling the 'pathExists' builtin
         at /pwd/lang/eval-fail-pathExists-1.nix:1:1:
            1| builtins.pathExists [ ]
             | ^
            2|

       … while realising the context of a path

       error: cannot coerce a list to a string: [ ]
